Add Tillman's formatting and extra question

--- a/lab5.ipynb
+++ b/lab5.ipynb
@@ -65,7 +65,7 @@
    "source": [
     "### 1. Filter response\n",
     "\n",
-    "Study the phase and frequency response of a filter with coefficients `b = [0.032, -0.053, 0.047, -0.053, 0.032]` and `a = [1, -2.742, 3.735, -2.578, 0.885]`. Use the `scipy.signal` function [`freqz`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.signal.freqz.html) and adapt the example given in the documentation to create a function `plot_filter(b, a)` that plots the frequency and phase response of a filter given by its coefficients `b` and `a`. Then use that function to check what type of filter this is."
+    "Study the **phase** and **frequency response** of a filter with coefficients `b = [0.032, -0.053, 0.047, -0.053, 0.032]` and `a = [1, -2.742, 3.735, -2.578, 0.885]`. Use the `scipy.signal` function [`freqz`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.signal.freqz.html) and **adapt the example** given in the documentation to create a function `plot_filter(b, a)` that plots the frequency and phase response of a filter given by its coefficients `b` and `a`. Then use that function to **check what type of filter** this is."
    ]
   },
   {
@@ -90,7 +90,7 @@
    "source": [
     "### 2. Filter design\n",
     "\n",
-    "In this part, we're going to analyse energy usage data given in `data/energy_usage.pkl` . The data in the file reflects the energy consumption of a kitchen, reporting a sample per minute."
+    "In this part, we're going to **analyse energy usage data** given in `data/energy_usage.pkl` . The data in the file reflects the **energy consumption of a kitchen**, reporting a sample per minute."
    ]
   },
   {
@@ -99,7 +99,7 @@
    "source": [
     "#### 2.1. Step one\n",
     "\n",
-    "[Unpickle](https://docs.python.org/3.7/library/pickle.html) the data (using [`pickle.load`](https://docs.python.org/3.7/library/pickle.html#pickle.load) on a file object). What is its sampling frequency? How many minutes are recorded?"
+    "[Unpickle](https://docs.python.org/3.7/library/pickle.html) the data (using [`pickle.load`](https://docs.python.org/3.7/library/pickle.html#pickle.load) on a file object). What is its **sampling frequency**? **How many minutes** are recorded?"
    ]
   },
   {
@@ -124,9 +124,9 @@
    "source": [
     "#### 2.2 Step two\n",
     "\n",
-    "Calculate the power spectrogram in dB of the data using the [`stft`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.signal.spectrogram.html) function in `scipy.signal`. Try a window size of 1024 samples and larger. Check the documentation for an example on how to visualise the spectrogram. You can adjust the range of the x-axis and y-axis with [`plt.xlim`](https://matplotlib.org/api/_as_gen/matplotlib.pyplot.xlim.html) and [`plt.ylim`](https://matplotlib.org/api/_as_gen/matplotlib.pyplot.ylim.html) respectively. This can be used to zoom in on particular sections of the plot. Remember that the output of the STFT are complex numbers, so you will need to convert it to a power spectrogram in dB yourself. Finally turn your code into a function `plot_spectrogram(time_signal, samplerate)` such that it can be reused later.\n",
+    "Calculate the **power spectrogram** in dB of the data using the [`stft`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.signal.spectrogram.html) function in `scipy.signal`. Try a window size of 1024 samples and larger. Check the documentation for an example on how to visualise the spectrogram. You can adjust the range of the x-axis and y-axis with [`plt.xlim`](https://matplotlib.org/api/_as_gen/matplotlib.pyplot.xlim.html) and [`plt.ylim`](https://matplotlib.org/api/_as_gen/matplotlib.pyplot.ylim.html) respectively. This can be used to zoom in on particular sections of the plot. Remember that the output of the STFT are **complex numbers**, so you will need to **convert** it to a power spectrogram in dB **yourself**. Finally turn your code into a **function**`plot_spectrogram(time_signal, samplerate)` such that it can be **reused** later.\n",
     "\n",
-    "What happens at the low frequencies? Can you detect any patterns? At which time in minutes do they appear? Name the position in minutes and frequency in Hz of two distinct energy consumption patterns you find? (report the lowest prominent frequency)."
+    "What happens with the **low frequencies**? Can you detect any **patterns**? At which time in minutes do they appear? Name the position in minutes and frequency in Hz of **two distinct energy consumption patterns** you find? (report the lowest prominent frequency)."
    ]
   },
   {
@@ -216,6 +216,23 @@
    "outputs": [],
    "source": [
     "# write your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Theory - Filter realisations\n",
+    "\n",
+    "Describe the difference betweeen  ***Direct Form 2*** (DF2) ***Direct Form 1*** (DF1) IIR filters (as shown in the slides). Why is DF2 equivalent to DF1?\n",
+    "Recall that FIR and IIR filters are linear systems and that all the operation they perform (addition, multiplication and delay) are linear. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_answer here_"
    ]
   },
   {
