Add question 1 explanation

--- a/coursework-datastream-template.ipynb
+++ b/coursework-datastream-template.ipynb
@@ -36,16 +36,58 @@
    "source": [
     "import numpy as np\n",
     "from scipy import fft, signal\n",
+    "from scipy.io import wavfile\n",
     "import matplotlib.pyplot as plt\n",
     "from skimage.transform import rotate\n",
-    "from skimage.util import random_noise"
+    "from skimage.util import random_noise\n",
+    "from IPython.display import Audio, display"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Digit recognition\n",
+    "## Controllable delay line (UG) or filter (PG)\n",
+    "\n",
+    "You will need to create a function that applies the desired effect to any input signal, where the effect can be dynamically modified by a control signal. The functions only need to be implemented for offline use, so you don't need to be handle input buffers of arbitrary sizes like in lab 6. It suffices to use a single for loop to run over all samples of the input and control signals, and create the output sample-by-sample.\n",
+    "\n",
+    "In both cases, the control signal will be a sine of 2Hz. Create one of the required length yourself. Any signal should work as input signal. You can learn how to [upload your own files](https://colab.research.google.com/notebooks/io.ipynb) into Google Colab, but the easiest will be to use one of the wave files available in the `audio` directory. If you're loading a stereo file, it is allowed to mix it down into a single mono channel before passing it to the effect to simplify processing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%ls audio/*.wav"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### UG\n",
+    "Program a controllable delay line. Mix the output with the original input to create a flanging effect. Use the control signal to vary the amount of delay between zero and a maximum value (1 millisecond would be a good default for this, use the samplerate to calculate how much samples this is).\n",
+    "\n",
+    "#### PG\n",
+    "Program a controllable FIR filter, i.e. a filter that changes its characteristics over time in response to a control signal. Apply the filter to the signal by implementing a convolution with the filter coefficients in a loop over the samples, just like in lab 6. In order to make the filter respond to the control signal, you can either design two static filters and interpolate between them (like in lab 6), or you can directly manipulate the filter characteristics in the filter design function [`firls`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.signal.firls.html) and call it for every iteration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Digit recognition (UG & PG)\n",
     "\n",
     "In this part, you're going to use images of handwritten digits ranging from 0 to 9. They are split in a training set and a test set and stored as text files in `data/digits-training.txt` and `data/digits-test.txt`."
    ]
@@ -147,10 +189,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write your code here"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Time series prediction with financial data\n",
+    "## Time series prediction with financial data (UG pairs & PG)\n",
     "\n",
     "In this part, you're going to use long term US stock market data (monthly indices, dividends, earnings, etc. since 1871). Information about the data provenance and references can be found at http://www.econ.yale.edu/~shiller/data.htm (especially the 2nd paragraph). The data is available in the file `data/financial_data.csv`.\n",
     "\n",
@@ -196,7 +247,7 @@
    "outputs": [],
    "source": [
     "date = financial['Date']\n",
-    "cape = financial['Cyclically_Adjusted_Price_Earnings_Ratio_PE10_or_CAPE']"
+    "real_price = financial['Real_Price']"
    ]
   },
   {
@@ -214,7 +265,7 @@
    "source": [
     "plt.figure()\n",
     "plt.plot(date, cape)\n",
-    "plt.title('Evolution of CAPE over time')\n",
+    "plt.title('Evolution of Real Price over time')\n",
     "plt.show()"
    ]
   },
@@ -227,6 +278,15 @@
     "1. Look for long term trends on a linear and log scale and de-trend the data first.\n",
     "2. Calculate the FFT of the signal of interest, to estimate possible periodicities. You can use a window to avoid spectral leaking.\n",
     "3. Refine your analysis by adjusting the size of the dataset (e.g. if you model annual patterns, make sure your dataset size is a multiple of 12)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write your code here"
    ]
   },
   {
