Add Tillman's formatting

--- a/lab8.ipynb
+++ b/lab8.ipynb
@@ -60,9 +60,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Creation of a harmonic model\n",
+    "### 1. Creating a harmonic model\n",
     "\n",
-    "Read the data in `data/power_consumption.csv` with [`np.genfromtxt`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.genfromtxt.html#numpy.genfromtxt). It is a subset of an individual househould electric power consumption dataset, which is available on [the UCI repository](https://archive.ics.uci.edu/ml/datasets/individual+household+electric+power+consumption). The first five lines of the file are displayed below. Use the appropriate options for `genfromtext` to parse the file correctly. The first line of the file contains a header. You can either use the header to create a [structured array](https://docs.scipy.org/doc/numpy/user/basics.rec.html) with the `names` parameter or skip it with `skip_header=1`. Make sure you understand what the output looks like for both options, as it will affect how you call the columns of the array next."
+    "Read the data in `data/power_consumption.csv` with [`np.genfromtxt`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.genfromtxt.html#numpy.genfromtxt). It is a subset of an individual househould electric **power consumption dataset**, which is available on [the UCI repository](https://archive.ics.uci.edu/ml/datasets/individual+household+electric+power+consumption). The first five lines of the file are displayed below. **Use appropriate options** for `genfromtext` to parse the file correctly. The first line of the file contains a header. You can either use the header to create a [structured array](https://docs.scipy.org/doc/numpy/user/basics.rec.html) with the `names` parameter or skip it with `skip_header=1`. Make sure you **understand** what the **output looks like** for both options, as it **will affect how you call the columns** of the array next."
    ]
   },
   {
@@ -87,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The file contains voltage values that are read every minute. How many days of data are in the file?"
+    "The file contains voltage values that are read every minute. **How many days of data** are in the file?"
    ]
   },
   {
@@ -101,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Select an excerpt of voltage data (ending at least one day before the end) that you think will be periodic (e.g. a day or week). First remove the mean from it. Then calculate its Fourier coefficients. This is your harmonic model. Plot it."
+    "**Select an excerpt** of voltage data (ending at least one day before the end) that you think will be periodic (e.g. a day or week). First **remove the mean** from it. Then calculate its **Fourier coefficients**. This is your **harmonic model** (at least the initial stage). Plot it."
    ]
   },
   {
@@ -117,9 +117,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Creation of a prediction\n",
+    "### 2. Creating a prediction\n",
     "\n",
-    "Set all coefficients smaller than a threshold to 0 in the harmonic model. Check the plot to find an appropriate order of magnitude for the threshold value. Then regenerate the time-domain signal with the (real-valued) IFFT (using [`fft.irfft`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.fft.irfft.html) like in lab 4). The IFFT creates a periodic output signal $\\hat{y}$. It can be repeated multiple times: $\\hat{y}[n+l] = \\hat{y}[n], \\forall n$ where $l$ is the length of the excerpt. This is your prediction."
+    "Set all **coefficients** smaller than a threshold **to 0** in the **harmonic model**. The idea is that small variations, typically at high frequenceis, are probably noise and will therefore not be repeated in the future. Check the plot to find an appropriate order of magnitude for the threshold value. Then regenerate the time-domain signal with the real-valued IFFT (using [`fft.irfft`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.fft.irfft.html) like in lab 4). The **IFFT creates a periodic output** signal $\\hat{y}$. It can be repeated multiple times: $\\hat{y}[n+l] = \\hat{y}[n], \\forall n$ where $l$ is the length of the excerpt. This is your **prediction**."
    ]
   },
   {
@@ -135,9 +135,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Comparison of prediction\n",
+    "### 3. Comparing and evaluating the prediction\n",
     "\n",
-    "Compare the predicted signal with the true signal both during and after the excerpt by plotting the mean-normalised signal and the repeated prediction together. Any easy way to repeat your prediction is by using the function [`np.tile`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.tile.html)."
+    "**Compare** the **predicted** signal with the **true** signal both during and after the excerpt by plotting the mean-normalised signal and the repeated prediction together. Any easy way to repeat your prediction is by using the function [`np.tile`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.tile.html)."
    ]
   },
   {
@@ -153,11 +153,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then calculate the prediction error by calculating the root mean square error between the repeated prediction $\\hat{y}$ and the true signal $y$ for a part of the signal that wasn't used in the creation of the prediction:\n",
+    "Then calculate the **prediction error** by calculating the **root mean square error (RMSE)** between the repeated prediction $\\hat{y}$ and the true signal $y$\n",
     "\\begin{equation}\n",
     "\\mathrm{RMSE} = \\sqrt{\\sum_{n=l}^{m l-1}\\dfrac{(y[n]-\\hat{y}[n])^2}{(m-1)l}}\n",
     "\\end{equation}\n",
-    "where $l$ is the length of the excerpt used to create the prediction and $m \\in \\mathbb{N}_{>1}$. The functions [`np.sqrt`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.sqrt.html), [`np.mean`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.mean.html) and [`np.power`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.power.html) make it easy to calculate this."
+    "where $l$ is the length of the excerpt used to create the prediction and $m \\in \\mathbb{N}_{>1}$. The functions [`np.sqrt`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.sqrt.html), [`np.mean`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.mean.html) and [`np.power`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.power.html) make it easy to calculate this.\n",
+    "\n",
+    "To estimate the prediction error for new data, do this for a **part** of the signal that was **not used in creating the prediction model**."
    ]
   },
   {
@@ -175,7 +177,7 @@
    "source": [
     "### 4. Effect of parameters on prediction\n",
     "\n",
-    "Vary the size of the excerpt (try multiples of your initial size, e.g. 24 hours) and the threshold to study the effect on the prediction."
+    "**Vary** the **size** of the excerpt (try multiples of your initial size, e.g. 24 hours) and the **threshold** to study the **effect** on the prediction. It's useful to predict on a test range that is several times longer that the excerpt size to get more reliable results.  "
    ]
   },
   {
