Add Tillman's formatting.

--- a/lab9.ipynb
+++ b/lab9.ipynb
@@ -16,6 +16,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get the resources from Github."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -34,6 +41,13 @@
     "        %cd city_dsp_ap\n",
     "except:\n",
     "    %cd city_dsp_ap"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import packages."
    ]
   },
   {
@@ -74,7 +88,7 @@
    "source": [
     "### 1. Image loading\n",
     "\n",
-    "In this lab, we're going to use [`scikit-image`](https://scikit-image.org/), a library that complements [`NumPy`](https://numpy.org) and [`SciPy`](https://scipy.org) with image-specific functionality. Note that its package name is abbreviated to `skimage` because Python doesn't allow hyphens in its names. A number of example images are available under `data/images`."
+    "In this lab, we're going to use [`scikit-image`](https://scikit-image.org/), a library that complements [`NumPy`](https://numpy.org) and [`SciPy`](https://scipy.org) with image-specific functionality. Note that its package name is abbreviated to **`skimage`** because Python doesn't allow hyphens in its names. A number of **example images** are available under `data/images`."
    ]
   },
   {
@@ -90,7 +104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load the file `data/images/trees.tif` using the [`imread`](https://scikit-image.org/docs/dev/api/skimage.io.html#skimage.io.imread) function from [`skimage.io`](https://scikit-image.org/docs/dev/api/skimage.io.html)."
+    "**Load** the file `data/images/trees.tif` using the [`imread`](https://scikit-image.org/docs/dev/api/skimage.io.html#skimage.io.imread) function from [`skimage.io`](https://scikit-image.org/docs/dev/api/skimage.io.html)."
    ]
   },
   {
@@ -106,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to display an image, you can use the [`plt.imshow`](https://matplotlib.org/api/_as_gen/matplotlib.pyplot.imshow.html) function from the [`Matplotlib`]() library we've been using for plotting before."
+    "In order to **display** an image, you can use the [`plt.imshow`](https://matplotlib.org/api/_as_gen/matplotlib.pyplot.imshow.html) function from the [`Matplotlib`]() library we've been using for plotting before."
    ]
   },
   {
@@ -122,7 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Display each colour channel (R, G, B) separately. `imread` returns a NumPy array of three dimensions: `rows (height)`, `columns (width)` and `colour`, so you can address individual pixels as `im[h, w, c]`. Like any NumPy array, you can access its elements using a simple index `i`, a range `p:q` or all elements in a dimension as `:`. For more information, check the [documentation on indexing arrays](https://docs.scipy.org/doc/numpy/reference/arrays.indexing.html)."
+    "Display **each colour channel** (R, G, B) separately. `imread` returns a NumPy array of three dimensions: `rows (height)`, `columns (width)` and `colour`, so you can **address individual pixels** as `im[h, w, c]`. Like any NumPy array, you can access its elements using a simple index `i`, a range `p:q` or all elements in a dimension as `:`. For more information, check the [documentation on indexing arrays](https://docs.scipy.org/doc/numpy/reference/arrays.indexing.html)."
    ]
   },
   {
@@ -140,9 +154,8 @@
    "source": [
     "### 2. Greyscale conversion\n",
     "\n",
-    "1. Convert the image into greyscale using the [`rgb2gray`](https://scikit-image.org/docs/dev/api/skimage.color.html#skimage.color.rgb2gray) function from [`skimage.color`](https://scikit-image.org/docs/dev/api/skimage.color.html). Note that `scikit.image` follows American English spelling, and therefore uses \"color\" and \"gray\" in its function names.\n",
-    "2. Convert the image into greyscale using the formula $\\dfrac{R}{3}+\\dfrac{G}{3}+\\dfrac{B}{3}$. The\n",
-    "    division by 3 has to be done for each colour channel before adding them together, instead of the mathematically equivalent $\\dfrac{R+G+B}{3}$, because the limited range of datatype `np.uint8` ($[0-255]$) would otherwise overflow. Because the division by three automatically upcasts the datatype of the result to a `float`, we need to cast it back to `np.uint8` by applying the [`astype`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.ndarray.astype.html) method."
+    "1. **Convert** the image into greyscale using the [`rgb2gray`](https://scikit-image.org/docs/dev/api/skimage.color.html#skimage.color.rgb2gray) **function** from [`skimage.color`](https://scikit-image.org/docs/dev/api/skimage.color.html). Note that `scikit.image` follows American English spelling, and therefore uses \"color\" and \"gray\" in its function names.\n",
+    "2. **Convert** the image into greyscale using the **formula** $\\dfrac{R}{3}+\\dfrac{G}{3}+\\dfrac{B}{3}$. The division by 3 has to be done for each colour channel before adding them together, instead of the mathematically equivalent $\\dfrac{R+G+B}{3}$, because the limited range of datatype `np.uint8` ($[0-255]$) would otherwise overflow. Because the division by three automatically upcasts the datatype of the result to a `float`, we need to cast it back to `np.uint8` by applying the [`astype`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.ndarray.astype.html) method."
    ]
   },
   {
@@ -160,10 +173,10 @@
    "source": [
     "### 3. Negative images\n",
     "\n",
-    "Compute and display the negative of the manually created greyscale image created in task 2.\n",
+    "Compute and display the **negative** of the manually created greyscale image created in task 2.\n",
     "\n",
-    "1. using the [`invert`](https://scikit-image.org/docs/dev/api/skimage.util.html) function from [`skimage.util`](https://scikit-image.org/docs/dev/api/skimage.util.html).\n",
-    "2. using the formula $q = L-1-p$ for each input pixel $p$, where $L$ is the number of grey levels for the datatype. In this case (i.e. `np.uint8`) it's 256."
+    "1. using the [`invert`](https://scikit-image.org/docs/dev/api/skimage.util.html) **function** from [`skimage.util`](https://scikit-image.org/docs/dev/api/skimage.util.html).\n",
+    "2. using the **formula** $q = L-1-p$ for each input pixel $p$, where $L$ is the number of grey levels for the datatype. In this case (i.e. `np.uint8`) it's 256."
    ]
   },
   {
@@ -199,8 +212,7 @@
    "source": [
     "### 5. Noise addition\n",
     "\n",
-    "Add Gaussian white noise with mean 0 and variance 0.1 to the original colour\n",
-    "image using [`gaussian`](https://scikit-image.org/docs/dev/api/skimage.filters.html#skimage.filters.gaussian) from [`skimage.filters`](https://scikit-image.org/docs/dev/api/skimage.filters.html) and display the result."
+    "Add **Gaussian** white noise with mean 0 and variance 0.1 to the original colour image with [`random_noise`](https://scikit-image.org/docs/stable/api/skimage.util.html?highlight=random_noise#skimage.util.random_noise) using [`gaussian`](https://scikit-image.org/docs/dev/api/skimage.filters.html#skimage.filters.gaussian) from [`skimage.filters`](https://scikit-image.org/docs/dev/api/skimage.filters.html) and display the result."
    ]
   },
   {
@@ -218,11 +230,11 @@
    "source": [
     "### 6. Image filtering\n",
     "\n",
-    "Read the image file `data/boat.tif` and display it. Apply the following filters to the image and display their results.\n",
+    "Read the image file `data/boat.tif` and display it. **Apply** the following **filters** to the image and **display** their results.\n",
     "\n",
-    "1. A 3x3 median filter using [`median`](https://scikit-image.org/docs/dev/api/skimage.filters.html#skimage.filters.median) from [`skimage.filters`](https://scikit-image.org/docs/dev/api/skimage.filters.html).\n",
-    "2. A 3x3 averaging filter by creating the appropriate filter matrix yourself and applying it to the image using [`convolve2d`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.signal.convolve2d.html) from [`scipy.signal`](https://docs.scipy.org/doc/scipy/reference/signal.html). For images, it's common to set the parameter `mode` of `convolve2d` to `same` such that the size of the resulting image is the same as the input image. In order to create a matrix with all elements the same value, you can use [`np.full`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.full.html#numpy.full).\n",
-    "3. A 3x3 Gaussian lowpass filter with $\\sigma = 1$ using\n",
+    "1. A **3x3 median filter** using [`median`](https://scikit-image.org/docs/dev/api/skimage.filters.html#skimage.filters.median) from [`skimage.filters`](https://scikit-image.org/docs/dev/api/skimage.filters.html).\n",
+    "2. A **3x3 averaging filter** by creating the appropriate filter matrix yourself and applying it to the image using [`convolve2d`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.signal.convolve2d.html) from [`scipy.signal`](https://docs.scipy.org/doc/scipy/reference/signal.html). For images, it's common to set the parameter `mode` of `convolve2d` to `same` such that the size of the resulting image is the same as the input image. In order to create a matrix with all elements the same value, you can use [`np.full`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.full.html#numpy.full).\n",
+    "3. A **3x3 Gaussian lowpass** filter with $\\sigma = 1$ using\n",
     "[`gaussian`](https://scikit-image.org/docs/dev/api/skimage.filters.html#skimage.filters.gaussian) from [`skimage.filters`](https://scikit-image.org/docs/dev/api/skimage.filters.html)."
    ]
   },
@@ -241,7 +253,7 @@
    "source": [
     "### 7. 2D convolution and correlation\n",
     "\n",
-    "Compute the 2D convolution and correlation of `a = [[1, 0, 0], [0, 1, 0], [0, 0, 0]]` and `b = [[0, 0, 0], [0, 1, 1], [0, 0, 0]]`."
+    "Compute the 2D **convolution** and **correlation** of `a = [[1, 0, 0], [0, 1, 0], [0, 0, 0]]` and `b = [[0, 0, 0], [0, 1, 1], [0, 0, 0]]`."
    ]
   },
   {
@@ -257,7 +269,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Verify that the convolution can be calculated as a correlation with the second image rotated 180 degrees. You can rotate an image 180 degrees by applying [`np.rot90`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.rot90.html) twice (check the `k` parameter) or by applying [`np.flipud`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.fliplr.html) followed by [`np.fliplr`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.flipud.html) (or the other way around)."
+    "**Verify** that the convolution can be calculated as a **correlation** with the second image **rotated 180 degrees**. You can rotate an image 180 degrees by applying [`np.rot90`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.rot90.html) twice (check the `k` parameter) or by applying [`np.flipud`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.fliplr.html) followed by [`np.fliplr`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.flipud.html) (or the other way around)."
    ]
   },
   {
@@ -273,7 +285,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The rotation needs to be applied to the second image because the correlation is not commutative, whereas the convolution is. Verify this for both by swapping the order of their input arguments."
+    "The rotation needs to be applied to the second image because the **correlation** is **not commutative**, whereas the **convolution is**. Verify this for both by swapping the order of their input arguments."
    ]
   },
   {
