Make minor corrections to coursework template

--- a/coursework-datastream-template.ipynb
+++ b/coursework-datastream-template.ipynb
@@ -71,7 +71,7 @@
     "Program a controllable delay line. Mix the output with the original input to create a flanging effect. Use the control signal to vary the amount of delay between zero and a maximum value (1 millisecond would be a good default for this, use the samplerate to calculate how much samples this is).\n",
     "\n",
     "#### PG\n",
-    "Program a controllable FIR filter, i.e. a filter that changes its characteristics over time in response to a control signal. Apply the filter to the signal by implementing a convolution with the filter coefficients in a loop over the samples, just like in lab 6. In order to make the filter respond to the control signal, you can either design two static filters and interpolate between them (like in lab 6), or you can directly manipulate the filter characteristics in the filter design function [`firls`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.signal.firls.html) and call it for every iteration."
+    "Program a controllable FIR filter, i.e. a filter that changes its characteristics over time in response to a control signal. Apply the filter to the signal by implementing a convolution with the filter coefficients in a loop over the samples, just like in lab 7. In order to make the filter respond to the control signal, you can either design two static filters and interpolate between them (like in lab 7), or you can directly manipulate the filter characteristics in the filter design function [`firls`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.signal.firls.html) and call it for every iteration."
    ]
   },
   {
@@ -264,7 +264,7 @@
    "outputs": [],
    "source": [
     "plt.figure()\n",
-    "plt.plot(date, cape)\n",
+    "plt.plot(date, real_price)\n",
     "plt.title('Evolution of Real Price over time')\n",
     "plt.show()"
    ]
